2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61425

        Buildfix for --minimal and CONFIG+=qt_minimal build.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::createChrome):
        * QtTestBrowser/launcherwindow.h:

2011-05-31  Kristóf Kosztyó  <Kosztyo.Kristof@stud.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [Qt] Implement find feature for QtTestBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61425

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::createChrome):
        (LauncherWindow::showFindBar):
        (LauncherWindow::find):
        * QtTestBrowser/launcherwindow.h:

2011-05-30  Carlos Garcia Campos  <cgarcia@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] Implement JavaScript dialogs in MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=61725

        * MiniBrowser/gtk/BrowserWindow.c:
        (WKStringGetCString): Helper function to get a UTF-8 c string from
        a WKStringRef.
        (WKURLGetCString): Helper function to get a UTF-8 c string from a
        WKURLRef.
        (browserWindowUpdateURL): Update to use WKURLGetCString.
        (didReceiveTitleForFrame): Update to use WKStringGetCString.
        (createMessageDialog): Create a GtkMessageDialog.
        (runJavaScriptAlert):
        (runJavaScriptConfirm):
        (runJavaScriptPrompt):
        (browserWindowUIClientInit):

2011-05-29  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Kent Tamura.

        WebSocket closing handshake
        https://bugs.webkit.org/show_bug.cgi?id=35721

        * Scripts/webkitpy/thirdparty/__init__.py:
        Pull in pywebsocket 0.6b1. We need to update pywebsocket